# Oxie-Talk

./: README.md  main.py  oxie_talk.db  pyproject.toml  tui_output.txt
Backend/: Cargo.toml  pyproject.toml
Backend/python/oxie_backend/: __init__.py
Backend/python/tests/: test_all.py
Backend/src/: lib.rs
Backend/src/audio/: recorder.rs
Backend/src/discovery/: dht.rs  mdns.rs
Backend/src/logging/: mod.rs
Modules/: logger.py  persistence.py  signaling.py  tui_components.py
