[package]
name = "oxie_backend"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "oxie_backend"
crate-type = ["cdylib"]

[dependencies]
cpal = "0.18.1"
futures = "0.3.32"
libp2p = { version = "0.56.0", features = ["kad", "tcp", "noise", "yamux", "mdns", "tokio", "macros"] }
mdns-sd = "0.20.1"
pyo3 = "0.29.0"
tokio = { version = "1.52.3", features = ["full"] }
webrtc = "0.17.1"
